# assistant

./: .gitignore  AGENT_INSTRUCTIONS.md  Makefile  README.md  home_assistant_migration_plan.md  pyproject.toml  setup.py
examples/: example_configuration.yaml
scripts/: clean_for_public.py  deploy_output_to_docker.py  fetch_current_via_ssh.py  fix_entity_areas.py  force_entity_areas.py  migration_step1_setup.py  migration_step2_compute.py  migration_step3_apply.py  real_device_area_fix.py
src/home_assistant_migration/: __init__.py  database.py  desired_setup.py  hass_client.py  main.py  migration_generator.py  migration_manager.py  migration_manager_v2.py  migration_manager_v2.py.backup  models.py  simple_migration.py  ssh_client.py  ssh_client.py.backup  storage.py
