[tool.poetry]
name = "home-assistant-migration"
version = "0.1.0"
description = "Home Assistant Migration and Redesign Tool"
authors = ["Teijo Konttila <teijo.konttila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
HomeAssistant-API = "^5.0.3"
pydantic = "^2.12.5"
python-dotenv = "^1.2.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"